tests/type-reconstruction/ill-typed/references/references-5.stella
language core;

extend with #pairs;
extend with #references;
extend with #type-reconstruction;

fn swap(p : {auto, auto}) -> {auto, auto} {
  return {p.2, p.1}
}

fn main(x : Nat) -> Nat {
  return swap(swap({<0xABCDEF>, x})).2
}
